# Lumen-ArtNode-Firmware

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE
.cmake/: arm-gcc-toolchain.cmake
boards/: CMakeLists.txt
boards/artnode-v2/: CMakeLists.txt
boards/artnode-v2/src/: main.cpp
hal/: CMakeLists.txt
hal/hal-core/inc/hal/: rcc-core.h  systick.h  utils.h
hal/hal-core/inc/hal/core/: gpio.h  rcc.h  uart.h
hal/hal-core/src/: systick.cpp
hal/logger/inc/: logger.h
hal/logger/src/: logger.cpp
hal/stm32g4/: CMakeLists.txt
hal/stm32g4/inc/: stm32g4xx.h
hal/stm32g4/inc/hal/: gpio.h
hal/stm32g4/src/hal/: rcc.cpp  systick.cpp
hal/stm32g4/stm32g474/inc/: stm32g474xx.h
hal/stm32g4/stm32g474/inc/hal/: hal.h  rcc.h  uart.h
hal/stm32g4/stm32g474/src/hal/: rcc.cpp
hal/tools/: stm32-gen.py
